# tandoor_recipe_thermal_printer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml
src/: main.rs  tandoor_api.rs
