[package]
name = "recipe_printer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
escpos = { version = "0.15.0", features = ["barcodes", "codes_2d"] }
reqwest = { version = "0.12.12", features = ["blocking", "json", "native-tls", "native-tls-vendored"] }
serde_json = "1.0.138"
