[package]
name = "recipe_printer"
version = "1.2.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
escpos = { version = "0.15.0", features = ["barcodes", "codes_2d"] }
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "charset", "json", "rustls-tls"] }
serde_json = "1.0.138"
unidecode = "0.3.0"
