[package]
name = "recipe_printer"
description = "Print recipes from Tandoor Recipes with a thermal receipt printer!"
version = "2.0.0"
edition = "2021"
license = "AGPL-3"
repository = "https://github.com/yetanothercarbot/tandoor_recipe_thermal_printer"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
escpos = { version = "0.16.0", features = ["barcodes", "codes_2d"] }
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "charset", "json", "rustls-tls"] }
serde_json = "1.0.138"
unidecode = "0.3.0"
serde = { version = "1.0.218", features = ["derive"] }
textwrap = {version = "0.16.2", features = ["smawk"]}
indicatif = "0.18.0"
